@@ -1,6 +1,6 @@
 
 noinst_LTLIBRARIES = libkantsidebar.la
-libkantsidebar_la_SOURCES = kantsidebar.cpp
+libkantsidebar_la_SOURCES = kantsidebar.cpp kantstacktabwidget.cpp
 
 INCLUDES= $(all_includes)
 
