@@ -17,10 +17,9 @@
 #include "kantsidebar.h"
 #include "kantsidebar.moc"
 
-#include <qtabbar.h>
 #include <kconfig.h>
 
-KantSidebar::KantSidebar(QWidget* parent, const char* name) : QTabWidget (parent, name)
+KantSidebar::KantSidebar(QWidget* parent, const char* name,bool stacked) : KantStackTabWidget (parent, name,stacked)
 {
 }
 
@@ -30,19 +29,19 @@ KantSidebar::~KantSidebar()
 
 void KantSidebar::addWidget(QWidget* widget, const QString & label )
 {
-  addTab (widget, label);
+  addPage (widget, label);
   showPage (widget);
   widget->setFocus();
 }
 
 void KantSidebar::removeWidget(QWidget* widget)
 {
-  removePage ( widget );
+//  removePage ( widget );
 }
 
 void KantSidebar::focusNextWidget()
 {
-  int id = currentPageIndex ();
+/*  int id = currentPageIndex ();
 
   if ( id < tabBar()->count()-1 )
     id++;
@@ -50,25 +49,27 @@ void KantSidebar::focusNextWidget()
     id = 0;
 
   setCurrentPage ( id );
-  currentPage ()->setFocus ();
+  currentPage ()->setFocus (); */
 }
 
 void KantSidebar::readConfig(KConfig* config, const char* group)
 {
   config->setGroup(group);
   QString t = config->readEntry("Current", "Files");
-  for (int i=0; i<tabBar()->count()-1; i++)
+  setMode(config->readBoolEntry("KOWStyle",true));
+/*  for (int i=0; i<tabBar()->count()-1; i++)
   {
     setCurrentPage ( i );
     if ( tabLabel ( currentPage() ).compare( t ) == 0 )
     {
       break;
     }
-  }
+  } */
 }
 
 void KantSidebar::saveConfig(KConfig* config, const char* group)
 {
+/*
   config->setGroup(group);
-  config->writeEntry("Current", tabLabel (currentPage ()));
+  config->writeEntry("Current", tabLabel (currentPage ()));*/
 }
