@@ -1,0 +1,49 @@
+#ifndef _K_STACK_WIDGET_H_
+#define _K_STACK_WIDGET_H_
+
+#include <qwidget.h>
+#include <qlist.h>
+#include <qstring.h>
+#include <qpushbutton.h>
+
+class KantStackTabWidgetButton;
+
+class KantStackTabWidget : public QWidget
+{
+	Q_OBJECT
+	public:
+		KantStackTabWidget(QWidget *parent, const char* name,bool stacked=true);
+                void addPage(QWidget *wid, QString header);
+                void showPage(QWidget *wid);
+                void showPage(int id);
+	        void setMode(bool mode);
+	private:
+		class QWidgetStack *internalView;
+		QList<KantStackTabWidgetButton> buttons;
+                class QVBox *topWidget;
+                class QWidget *bottomBox;
+                class QVBoxLayout *BottomLayout;
+		class QTabBar *tabbar;
+		bool _stacking;
+                int lastID;
+                bool internal_updated;
+        private slots:
+                void selected_tabbar(int id);
+                void selected_button(int id);
+};
+
+class KantStackTabWidgetButton : public QPushButton
+{
+        Q_OBJECT
+        public:
+                KantStackTabWidgetButton(const QString &, QWidget *,int);
+                int getID();
+        private:
+                int _id;
+        private slots:
+                void _clicked();
+        signals:
+                void clicked(int);
+};
+
+#endif
